--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-LITE_SERVERS:-1185526007:22096:6PGkPQSbyFp12esf1NqmDOaLoFA8i9+Mp5+cAx5wtTU=
-PORT=8080
-LOG_LEVEL=info
-METRICS_PORT=9010
+LITE_SERVERS="-1185526007:22096:6PGkPQSbyFp12esf1NqmDOaLoFA8i9+Mp5+cAx5wtTU=, -1952265919:14395:4R0C/zU56k+x2HGMsLWjX2rP/SpoTPIHSSAmidGlsb8=, -1402455171:14432:/YDNd+IwRUgL0mq21oC0L3RxrS8gTu0nciSPUrhqR78=, -1402397332:14583:DA0H568bb+LoO2LGY80PgPee59jTPCqqSJJzt1SH+KE=, -2018147130:6302:MJr8xja0xpu9DoisFXBrkNHNx1XozR7HHw9fJdSyEdo=, -2018147075:6302:Fhldu4zlnb20/TUj9TXElZkiEmbndIiE/DXrbGKu+0c=, 89013260:54390:gzUNJnBJhdpooYCE8juKZo2y4tYDIQfoCvFm0yBr7y0=, 94452896:12485:jXiLaOQz1HPayilWgBWhV9xJhUIqfU95t+KFKQPIpXg=, 85383775:36752:vhFPq+tgjJi+4ZbEOHBo4qjpqhBdSCzNZBdgXyj3NK8=, 759132846:50187:sbsuMcdyYFSRQ0sG86/n+ZQ5FX3zOWm1aCVuHwXdgs0=, -1481887565:25975:aeMgdMdkkbkfAS4+n4BEGgtqhkf2/zXrVWWECOJ/h3A=, -2134428422:45943:rNzhnAlmtRn9rTzW6o2568S6bbOXly7ddO1olDws5wM="
+PORT="8080"
+LOG_LEVEL="info"
+METRICS_PORT="9010"
