--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-LITE_SERVERS="-1882812265:27444:GniN+joKnbuzFDdXJ/31McAaj6YM3Qnbg/M8DS1mvPk="
+LITE_SERVERS="143.198.144.151:27444:GniN+joKnbuzFDdXJ/31McAaj6YM3Qnbg/M8DS1mvPk="
 PORT="8080"
 LOG_LEVEL="info"
 METRICS_PORT="9010"
