--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-LITE_SERVERS="-1882812265:8088:SGQIKBCUy5H2dFDLGgFltdnuT94Fdd6a8VXYrs9Lfd4="
+LITE_SERVERS="143.198.144.151:8088:SGQIKBCUy5H2dFDLGgFltdnuT94Fdd6a8VXYrs9Lfd4="
 PORT="8080"
 LOG_LEVEL="info"
 METRICS_PORT="9010"
